fix: image visibility

--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -64,18 +64,19 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
-    // background-position: center;
+    visibility: hidden;
+    opacity: 0;
   }
 
   &__item--1 {
     grid-column: 1 / 5;
-    grid-row: 6/ -1;
+    grid-row: 6 / -1;
     z-index: 4;
     position: relative;
 
     &::after {
       content: "";
-      width: 100%;
+      width: 105%;
       height: 100%;
       position: absolute;
       top: 0;
@@ -90,7 +91,7 @@
 
     &::after {
       content: "";
-      width: 100%;
+      width: 105%;
       height: 100%;
       position: absolute;
       top: 0;
@@ -106,8 +107,8 @@
 
     &::after {
       content: "";
-      width: 100%;
-      height: 100%;
+      width: 105%;
+      height: 105%;
       position: absolute;
       bottom: 0;
       right: 0;
@@ -155,6 +156,8 @@
     font-style: 2rem;
     font-weight: 400;
     text-transform: uppercase;
+  }
+  &__item:not(:last-child) {
     margin-right: 2.5rem;
   }
 }
